title: finish styling blog, mobile, about body: fixed button size on mobile size with MQ; added txt and photo to about page; corrected some erroneous styles;

--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -53,7 +53,7 @@ color: rgba(255,255,255,0.8);
 }
 
 .js-off-canvas-exit{
-  background: rgba(0,0,0,0.5)
+  background: rgba(0,0,0,0.5);
 }
 
 /* *************************************************************
@@ -141,6 +141,8 @@ HERO
 .hero h2,
 .hero h3,
 .hero h4,
+.hero h5,
+.hero h6,
 .hero p{
   color: rgba(255, 255, 255, 0.8);
     max-width: 100%;
@@ -160,12 +162,19 @@ HERO
   font-family: 'Open Sans', sans-serif;
 }
 
-.hero .button{
+.hero-index .button{
   position: relative;
   left: 40%;
   margin-top: 5%;
   display:block;
   width:17%;
+}
+.hero-blog .button{
+  position: relative;
+  left: 30%;
+  /*margin-top: 5%;*/
+  /*display:block;*/
+  /*width:17%;*/
 }
 /*Test only
 .hero-index{
@@ -214,12 +223,49 @@ MAIN SECTION
   width: 100%;
   max-height: 400px;
 }
+.main-blog dd{
+  color: black;
+}
+.main-blog dt{
+  color: black;
+}
+.other-blog-text{
+  border: solid;
+  border-color:#438d8d;
+   /*rgba(180, 180, 180, 0.6);*/
+}
+/*.main-blog .button{
+  background-color: black;
+  position: relative;
+  left: 40%;
+}*/
+/*.other-blog-text{
+  position: absolute;
+  /*display: inline-block;
+}*/
 /*.index-main{
   font-family:
 }*/
+
+/* *************BLOG 2 PAGE*****************************************/
+.nothing-blog-header{
+  color: #CC6626;
+  font-family: Helvetica;
+}
+.other-blog-text{
+  width:30%;
+}
+
+
+
+
+
+
 /* *************************************************************
 FOOTER
-************************************************************* */
+**********************************************
+/**/
+
 footer{
   background-color: #222;
   height: 200px;
@@ -275,15 +321,37 @@ MEDIA QUERY
     display: none;
   }
 }
-/*This makes the navbar dissapear if the window is smaller the set above
+/*This makes the navbar dissapear if the window is smaller the set above*/
 
-@media (max-width: 875px) {
+@media (max-width: 400px){
+  .hero-index .button{
+    width:25%;
+  }
+}
+
+@media (max-width: 400px){
+  .hero-blog .button{
+    position: relative;
+    left: 0%;
+  }
+}
+
+/*position: relative;
+left: 0%;
+/*margin-top: 5%;*/
+/*display:block;*/
+/*width:17%;*/*/
+/*@media (min-width:399px){
+
+}*/
+
+/*@media (max-width: 875px) {
   .hero h1
   .hero h3
   .hero p {
     width: 100%;
   }
-}
+}*/
 /*makes these sections have a max width, at which they stop*/
 
 /*
